--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,41 @@
   </properties>
 
   <dependencies>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.9.2</version>
+    </dependency>
+
+
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <!--Use this only when using Java 9+-->
+          <!--release>15</release -->
+
+          <source>1.8</source>
+          <target>1.8</target>
+
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+
+
 </project>
